--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "url": "https://github.com/VVr17/goit-js-hw-11/issues"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "handlebars": "^4.7.7",
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.5"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
